--- a/StudentRegistrationAPI/StudentRegistrationAPI.csproj
+++ b/StudentRegistrationAPI/StudentRegistrationAPI.csproj
@@ -169,8 +169,12 @@
     <Compile Include="Models\ApiResponseModel.cs" />
     <Compile Include="Models\BaseResponseModel.cs" />
     <Compile Include="Models\CheckNullResponse.cs" />
+    <Compile Include="Models\LoginModel.cs" />
+    <Compile Include="Models\LoginRequestModel.cs" />
+    <Compile Include="Models\LoginResposeModel.cs" />
     <Compile Include="Models\SessionModel.cs" />
     <Compile Include="Models\TestModel.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\ResponseCode.Designer.cs">
       <AutoGen>True</AutoGen>
