filter fixed, student create and listing

--- a/StudentRegistrationAPI/StudentRegistrationAPI.csproj
+++ b/StudentRegistrationAPI/StudentRegistrationAPI.csproj
@@ -149,11 +149,17 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Domain\DAO\AcademicYearDAO.cs" />
     <Compile Include="Domain\DAO\BaseDAO.cs" />
     <Compile Include="Domain\DAO\LoginDAO.cs" />
+    <Compile Include="Domain\DAO\MajorDAO.cs" />
+    <Compile Include="Domain\DAO\StudentDAO.cs" />
+    <Compile Include="Domain\DAO\UniversityDAO.cs" />
     <Compile Include="Domain\DAO\UserDAO.cs" />
+    <Compile Include="Domain\Services\StudentService.cs" />
     <Compile Include="Domain\Services\UserService.cs" />
     <Compile Include="Filters\DecryptionFilter.cs" />
     <Compile Include="Filters\Filter.cs" />
@@ -169,10 +175,14 @@
     <Compile Include="Models\ApiResponseModel.cs" />
     <Compile Include="Models\BaseResponseModel.cs" />
     <Compile Include="Models\CheckNullResponse.cs" />
+    <Compile Include="Models\CreateStudentRequestModel.cs" />
+    <Compile Include="Models\CreateStudentResponseModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\LoginRequestModel.cs" />
     <Compile Include="Models\LoginResposeModel.cs" />
     <Compile Include="Models\SessionModel.cs" />
+    <Compile Include="Models\StudentDTO.cs" />
+    <Compile Include="Models\StudnetListResponseModel.cs" />
     <Compile Include="Models\TestModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
