--- a/StudentRegistrationAPI/StudentRegistrationAPI.csproj
+++ b/StudentRegistrationAPI/StudentRegistrationAPI.csproj
@@ -147,11 +147,13 @@
     <Compile Include="App_Start\LanguageMessageHandler.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AcademicyearController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\MajorController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
-    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UniversityController.cs" />
     <Compile Include="Domain\DAO\AcademicYearDAO.cs" />
     <Compile Include="Domain\DAO\BaseDAO.cs" />
     <Compile Include="Domain\DAO\LoginDAO.cs" />
@@ -159,7 +161,10 @@
     <Compile Include="Domain\DAO\StudentDAO.cs" />
     <Compile Include="Domain\DAO\UniversityDAO.cs" />
     <Compile Include="Domain\DAO\UserDAO.cs" />
+    <Compile Include="Domain\Services\AcademicyearService.cs" />
+    <Compile Include="Domain\Services\MajorService.cs" />
     <Compile Include="Domain\Services\StudentService.cs" />
+    <Compile Include="Domain\Services\UniversityService.cs" />
     <Compile Include="Domain\Services\UserService.cs" />
     <Compile Include="Filters\DecryptionFilter.cs" />
     <Compile Include="Filters\Filter.cs" />
@@ -169,6 +174,8 @@
     </Compile>
     <Compile Include="Helpers\Helper.cs" />
     <Compile Include="Helpers\RijndaelCrypt.cs" />
+    <Compile Include="Models\AcademicYearListResponseModel.cs" />
+    <Compile Include="Models\AcademicYearModel.cs" />
     <Compile Include="Models\AccountCreateRequestModel.cs" />
     <Compile Include="Models\AccountCreateResponseModel.cs" />
     <Compile Include="Models\ApiRequestModel.cs" />
@@ -180,12 +187,16 @@
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\LoginRequestModel.cs" />
     <Compile Include="Models\LoginResposeModel.cs" />
+    <Compile Include="Models\MajorListResponseModel.cs" />
+    <Compile Include="Models\MajorModel.cs" />
     <Compile Include="Models\SessionModel.cs" />
     <Compile Include="Models\StudentDeleteRequestModel.cs" />
     <Compile Include="Models\StudentDTO.cs" />
     <Compile Include="Models\StudentUpdateRequestModel.cs" />
     <Compile Include="Models\StudnetListResponseModel.cs" />
     <Compile Include="Models\TestModel.cs" />
+    <Compile Include="Models\UniversityListResponseModel.cs" />
+    <Compile Include="Models\UniversityModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\ResponseCode.Designer.cs">
