--- a/StudentRegistrationAPI/Web.config
+++ b/StudentRegistrationAPI/Web.config
@@ -15,7 +15,7 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
 <connectionStrings>
-	<add name="DBConnection" connectionString="Data Source=ACEBI3061\SQLEXPRESS_2012;Initial Catalog=StudentRegistration;User Id=sa;password=sasa;" providerName="System.Data.SqlClient" />	
+	<add name="DBConnection" connectionString="Data Source=ACEBI1052;Initial Catalog=StudentRegistration;User Id=sa;password=sasa;" providerName="System.Data.SqlClient" />	
 </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
